Fix typeahead dropdown z-index when a modal is displayed

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -169,3 +169,8 @@ h2 > .label {
     margin: 0 20px;
   }
 }
+
+/* fix typeahead not displaying above modal blockout */
+.typeahead.dropdown-menu {
+  z-index: 1099;
+}
